<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="48dp"
    android:layout_marginTop="48dp"
    android:background="@drawable/shape_rounded"
    android:backgroundTint="@color/theme_bg"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_folder_title"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
        tools:listitem="@layout/recycler_view_item_move_folder"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="24dp"/>

    <Button
        android:id="@+id/bnt_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/theme_secondary"
        android:text="@string/move_folder_negative"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/recyclerview_move"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bnt_positive"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        />
    <Button
        android:id="@+id/bnt_positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/theme_accent"
        android:text="@string/move_folder_positive"
        android:textColor="@color/theme_secondary"
        app:layout_constraintTop_toBottomOf="@id/recyclerview_move"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bnt_negative"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="4dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>